# openai-api

./: .gitignore  LICENSE  README.md  openai-api_architecture.drawio  pyproject.toml
src/oiaapi/: __init__.py  chat.py  content.py  core.py  history.py  metrics.py
src/openaiapi/: __init__.py  client.py  content.py  history.py  metrics.py
