[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# ¡Aquí está la magia! Este es el nombre de instalación usando guiones
name = "openai-api"
version = "0.1.0"
description = "Interfaz amigable para manejar la API de OpenAI desde Python"
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pandas>=1.0.0",
]

[tool.setuptools.packages.find]
# Le decimos dónde buscar el código importable
where = ["src"]
